objects/GEMS_SBC_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>BlueStar_Account_Number__c</fullName>
        <formula>MID(Case__r.Account.External_ID__c,2,8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BlueStar Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SBC Request Form</relationshipLabel>
        <relationshipName>GEMS_SBC_Request_Forms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GEMS_Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Additional_Notifications__c</fullName>
        <label>Additional Notifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Affected_Benefit_Agreements__c</fullName>
        <description>Number of affected benefit agreements</description>
        <label>Affected Benefit Agreements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEMS_Affected_Funding_Types__c</fullName>
        <label>Affected Funding Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Carved_Out_Benefits_From_Vendors__c</fullName>
        <label>Carved Out Benefits From Other Vendors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Chinese_specify_BAs__c</fullName>
        <label>Chinese, specify BAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Cluster__c</fullName>
        <description>This field describe the Cluster for the opprotunity</description>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Current_No_of_Members__c</fullName>
        <label>Current # of Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEMS_Current_No_of_Subscribers__c</fullName>
        <label>Current # of Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEMS_Did_HCSC_Create_the_SBC_Last_Year__c</fullName>
        <label>Did HCSC Create the SBC Last Year?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_District__c</fullName>
        <formula>TEXT(Case__r.Account.District__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Grandfathered_benefit_s__c</fullName>
        <label>Grandfathered benefit(s)?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Mental_Health__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mental Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEMS_Minimum_Essential_Coverage_MEC__c</fullName>
        <label>Minimum Essential Coverage/MEC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Minimum_Value_Standard_MV__c</fullName>
        <label>Minimum Value Standard/MV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Navajo_specify_BAs__c</fullName>
        <label>Navajo, specify BAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Number_of_BAs__c</fullName>
        <label>Number of BAs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEMS_Number_of_SBCs_Being_Requested__c</fullName>
        <label>Number of SBCs Being Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEMS_Other_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEMS_Other__c</fullName>
        <label>Other</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Blue Directions</fullName>
                </value>
                <value>
                    <fullName>Blue 365 Discount Program</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>EUM (inpatient)</fullName>
                </value>
                <value>
                    <fullName>GeoBlue</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Indemnity Vision</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare Part D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Print_Mail__c</fullName>
        <label>Print/Mail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GEMS_Did_HCSC_Create_the_SBC_Last_Year__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Material Modification</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous - Post Finalization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Reason_for_Rush__c</fullName>
        <label>Reason for Rush</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Request_ID__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Revision_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revision Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEMS_Rush__c</fullName>
        <label>Rush</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_SBC_Request_Type__c</fullName>
        <label>SBC Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Did HCSC Create the SBC Last Year</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous - Post Finalization</fullName>
                </value>
                <value>
                    <fullName>Notice of Material Modification</fullName>
                </value>
                <value>
                    <fullName>SBC Renewal with Benefit and/or Effective Date Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_SBC_Return_Reasons__c</fullName>
        <label>SBC Return Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error on ABS or Matrix/Highlight Acc</fullName>
                </value>
                <value>
                    <fullName>Requests language or formatting update</fullName>
                </value>
                <value>
                    <fullName>RX carved out update</fullName>
                </value>
                <value>
                    <fullName>Benefit explanation</fullName>
                </value>
                <value>
                    <fullName>Error on SBC Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Sbc_District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
                <value>
                    <fullName>032</fullName>
                </value>
                <value>
                    <fullName>037</fullName>
                </value>
                <value>
                    <fullName>038</fullName>
                </value>
                <value>
                    <fullName>043</fullName>
                </value>
                <value>
                    <fullName>061</fullName>
                </value>
                <value>
                    <fullName>062</fullName>
                </value>
                <value>
                    <fullName>063</fullName>
                </value>
                <value>
                    <fullName>098</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>290</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Spanish_specify_BAs__c</fullName>
        <label>Spanish, specify BAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Tagalog_specify_BAs__c</fullName>
        <label>Tagalog, specify BAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Translations__c</fullName>
        <label>Translations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Highlight__c</fullName>
        <formula>IF( ISPICKVAL(GEMS_Rush__c, &apos;Yes&apos;) , 
IMAGE(&quot;https://chart.googleapis.com/chart?chst=d_text_outline&amp;chld=d84a4a|14|l|ffffff|b|&quot; + text(GEMS_Rush__c),&quot;&quot;)
,
text(GEMS_Rush__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rush</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rx</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS SBC Request Form</label>
    <nameField>
        <displayFormat>SB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS SBC Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>